deprecated ctors since version 9 Integer(int), Byte(b), ...
use static Integer valueOf(int i) instead new Integer(int)

dto for
new Byte(b) ==> Byte.valueOf(b)
new Character(c) ==> Character.valueOf(c)
Double
Float
Long
Short
...