@@ -2,7 +2,6 @@
  * Copyright 2004 Sun Microsystems, Inc., 4150 Network Circle,
  * Santa Clara, California 95054, U.S.A. All rights reserved.
  */
-
 package org.jdesktop.swingx;
 
 import java.awt.Component;
@@ -320,10 +319,9 @@ public class RootPaneTest extends TestCase {
     @SuppressWarnings("serial")
 	public static class TestAction extends AbstractAction {
 
-	public TestAction(String name, int mnemonic,
-			  String description) {
+	public TestAction(String name, int mnemonic, String description) {
 	    super(name);
-	    putValue(Action.MNEMONIC_KEY, new Integer(mnemonic));
+	    putValue(Action.MNEMONIC_KEY, Integer.valueOf(mnemonic));
 	    putValue(Action.LONG_DESCRIPTION, description);
 	}
 	public void actionPerformed(ActionEvent evt) {}
